fix: theme-list spacing should be different

--- a/packages/website/src/components/theme-list/theme-list.css
+++ b/packages/website/src/components/theme-list/theme-list.css
@@ -6,7 +6,7 @@
 
 .ma-theme-list__list {
   display: flex;
-  gap: var(--basis-space-inline-xl);
+  gap: var(--basis-space-inline-md);
   list-style: none;
   margin-block: 0;
   margin-inline: 0;
